--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=block');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=block');
 
 html{
 	padding:0px;
@@ -14,8 +14,8 @@ body{
 	overflow-x:hidden;
     overflow-y:hidden;
     height:100%;
-	font-family:'Avenir';
-	background:#F5F5F5;
+	font-family:'Open Sans';
+	background:#FAFBFD;
 }
 
 *{
